# geovctrs

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE-text.html  LICENSE.html  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  authors.html  configure  configure.ac  index.html  pkgdown.yml
.github/workflows/: check.yaml  coverage.yml  pkgdown.yaml
R/: RcppExports.R  data.R  geo-bbox.R  geo-coalesce.R  geo-collection.R  geo-convert.R  geo-coord-collection.R  geo-coord-linestring.R  geo-coord-point.R  geo-coord-polygon.R  geo-coord.R  geo-coordinates.R  geo-geometry-type.R  geo-grob.R  geo-lim.R  geo-linestring.R  geo-missing.R  geo-multi-linestring.R  geo-multilinestring.R  geo-multipoint.R  geo-multipolygon.R  geo-parse.R  geo-plot.R  geo-point.R  geo-polygon.R  geo-print.R  geo-ptype.R  geo-rect.R  geo-segment.R  geo-srid.R  geo-summary.R  geo-transform.R  geo-triang.R  geo-unnest.R  geo-wkb.R  geo-wkt.R  geo-xy.R  geo-xyz.R  geo-z.R  geo_linestring.R  (+8 more)
articles/: extending-geovctrs.html  index.html
data/: geo_example_wkt.rda  geo_nc.rda
data-raw/: example-wkts.R  geo_nc.R
inst/include/: geovctrs.h  geovctrs_RcppExports.h
inst/include/geovctrs/: exporter.hpp  factory.hpp  feature-factory.hpp  geos-feature-factory.hpp  geos-handler.hpp  geos-operator.hpp  geos-provider.hpp  operator.hpp  provider.hpp  wk-fields.h  wk-fields.hpp  wk-filter.hpp  wk-rect.h  wk-rect.hpp  wk-segment.h  wk-segment.hpp  wk-xy.h  wk-xy.hpp  wk-xyz.h  wk-xyz.hpp
inst/include/geovctrs/geos/: exporter.hpp  feature-factory.hpp  geometry-factory.hpp  operator.hpp  provider.hpp  test-cpp-geos-operator.R
man/: geo_bbox.Rd  geo_coalesce.Rd  geo_collection.Rd  geo_convert.Rd  geo_coord_collection.Rd  geo_coord_point.Rd  geo_coordinates.Rd  geo_example_wkt.Rd  geo_geometry_type.Rd  geo_grob.Rd  geo_is_missing.Rd  geo_lim.Rd  geo_linestring.Rd  geo_multilinestring.Rd  geo_multipoint.Rd  geo_multipolygon.Rd  geo_nc.Rd  geo_plot.Rd  geo_point.Rd  geo_polygon.Rd  geo_print.Rd  geo_ptype.Rd  geo_rect.Rd  geo_segment.Rd  geo_set_z.Rd  geo_srid.Rd  geo_summary.Rd  geo_transform.Rd  geo_unnest.Rd  geo_unnest_collection.Rd  geo_wkb.Rd  geo_wkt.Rd  geo_xy.Rd  geos_version_runtime.Rd  geovctrs-package.Rd  is_geovctr.Rd  is_wk_wkb.Rd  is_wk_wkt.Rd  new_geo_collection.Rd  new_geo_coord_collection.Rd  (+16 more)
reference/: geo_bbox.html  geo_coalesce.html  geo_collection.html  geo_convert.html  geo_coord_point.html  geo_coordinates.html  geo_example_wkt.html  geo_geometry_type.html  geo_grob.html  geo_is_missing.html  geo_lim.html  geo_linestring.html  geo_multilinestring.html  geo_multipoint.html  geo_multipolygon.html  geo_nc.html  geo_plot.html  geo_point.html  geo_polygon.html  geo_print.html  geo_ptype.html  geo_rect.html  geo_segment.html  geo_set_z.html  geo_srid.html  geo_summary.html  geo_transform.html  geo_unnest.html  geo_unnest_collection.html  geo_wkb.html  geo_wkt.html  geo_xy.html  geos_version.html  geos_version_runtime.html  geovctrs-package.html  index.html  is_geo_coord.html  is_geovctr.html  new_geo_collection.html  new_geo_coord_linestring.html  (+18 more)
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  geo-bbox.cpp  geo-convert.cpp  geo-envelope.cpp  geo-missing.cpp  geo-parse.cpp  geo-srid.cpp  geo-summary.cpp  geo-z.cpp  geos-base.cpp  geos-base.h  geos-coords-write.cpp  geos-coords-write.h  geos-coords.cpp  geos-coords.h  geos-geometry-info.cpp  geos-operator.cpp  geos-operator.h  geos-operator.hpp  geos-provider.cpp  geos-provider.h  geos-provider.hpp  geos-version.cpp  test-geos-operator.cpp  wk-convert.cpp  wk-filters.cpp  wk-finite.cpp  wk-unnest.cpp
tests/: testthat.R
tests/testthat/: test-cpp-geos-operator.R  test-geo-bbox.R  test-geo-coalesce.R  test-geo-collection.R  test-geo-convert.R  test-geo-coord-collection.R  test-geo-coord-linestring.R  test-geo-coord-point.R  test-geo-coord-polygon.R  test-geo-coordinates.R  test-geo-geometry-type.R  test-geo-grob.R  test-geo-lim.R  test-geo-linestring.R  test-geo-missing.R  test-geo-multi-linestring.R  test-geo-multilinestring.R  test-geo-multipoint.R  test-geo-multipolygon.R  test-geo-plot.R  test-geo-point.R  test-geo-polygon.R  test-geo-print.R  test-geo-rect.R  test-geo-segment.R  test-geo-srid.R  test-geo-summary.R  test-geo-transform.R  test-geo-unnest.R  test-geo-wkb.R  test-geo-wkt.R  test-geo-xy.R  test-geo-xyz.R  test-geo-z.R  test-geos-version.R  test-geovctr.R  test-separate-unite.R  test-sf-compat.R  test-utils.R  test-wk.R
vignettes/: extending-geovctrs.Rmd
